<resources>
    <string name="app_name">P2PFinancial</string>
    <string name="main_frag_name">硅谷彩虹新手计划</string>
    <string name="main_frag_txt_one">本息保障</string>
    <string name="main_frag_txt_two">每日计息</string>
    <string name="main_frag_txt_three">高额收益</string>
    <string name="main_frag_apr">预期年利率:8.00%</string>
    <string name="main_frag_btn">立即加入</string>
    <string name="main_frag_safeguard">风险保障由硅谷银行监管</string>
    <string name="item_angle"><![CDATA[>]]></string>
    <string name="allinvest_money">产品金额</string>
    <string name="item_thousand">万</string>
    <string name="allinvest_apr">预期年利率</string>
    <string name="item_symbol">%</string>
    <string name="item_safeguard">本息保障</string>
    <string name="allinvest_lockup">锁定期</string>
    <string name="item_day">天</string>
    <string name="invest_slogan">   硅谷金融好运当头,首投返现最高达188元   </string>
    <string name="loading_test">数据正在路上...</string>
    <string name="more_text_regist">用户注册</string>
    <string name="more_text_secret">手势密码</string>
    <string name="more_text_reset">重置手势密码</string>
    <string name="more_contact_phone">010-56253825</string>
    <string name="more_text_contact">联系客服</string>
    <string name="more_text_sms">用户反馈</string>
    <string name="more_text_share">分享给好友</string>
    <string name="more_text_about">关于硅谷理财</string>
    <string name="login_study">学习提示:</string>
    <string name="login_buy">充值我们将以集成支付宝sdk支付金额演示充值功能</string>
    <string name="login_contact_text">提现业务:在p2p金融平台中,提现都不是实时到账的,而是审核提现,系统将会告知24小时内进行转账,如果未收到,请联系客服...</string>
    <string name="login_invest_manage">投资管理(直观)</string>
    <string name="login_investment_manage">投资管理</string>
    <string name="login_money_manage">资产管理</string>
    <string name="register_phone">手机号:</string>
    <string name="put_phone">请输入手机号</string>
    <string name="register_user">用户名:</string>
    <string name="put_user">请输入用户名</string>
    <string name="register_pwd">密码:</string>
    <string name="put_pwd">请输入密码</string>
    <string name="register_password">确认密码:</string>
    <string name="put_password">请确认密码</string>
    <string name="register">注册</string>
    <string name="consult_register">咨询部</string>
    <string name="invest_register">理财部</string>
    <string name="skill_register">技术部</string>
    <string name="feedback_register">用户反馈</string>
    <string name="feedback_send">发送:</string>
    <string name="feedback_message">信息:</string>
    <string name="feedback_problem">反馈您遇到的任何问题给客服人员</string>
    <string name="feedback_no">取消</string>
    <string name="feedback_yes">确定</string>
    <string name="about_it">硅谷金融隶属于尚硅谷IT教育品牌</string>
    <string name="www_atguigu_com">硅谷金融(www.atguigu.com)，系尚硅谷(中国)旗下独立运营品牌。“硅谷金融”是一家基于互联网技术为用户提供金融理财服务的专业化公司。</string>
    <string name="about_good">硅谷金融自2014年上线运营以来，得到用户的广泛信赖和一致好评。目前“硅谷金融”服务的用户覆盖全国30余个省市、自治区，成功帮助用户获得借款并让出借用户获得稳定的高收益。</string>
    <string name="about_system">硅谷金融拥有完善的管理制度、卓越的管理团队、标准的运作流程、严格的风控措施，为平台两端的用户提供咨询、评估、理财方案制定、协议管理等全方位的专业化微金融与财富管理咨询服务。</string>
    <string name="about_pattern">硅谷金融是以个人对个人小额借贷为主要模式，通过为出借人提供可靠、稳健、投资回报高的理财产品，为借款人提供快捷、便利、长期稳定的低成本资金撮合渠道，从而构建透明、便捷、平等的网络金融交易服务平台。硅谷金融受益于严格的个人金融风险定价体系和安全分散有保障的投资机制，借款人和出借人的权益均可得到充分的保障和满足。</string>
    <string name="about_develop">在互联网金融蓬勃发展的今天，硅谷金融不断探索创新模式，致力于成为一家卓越的互联网金融企业，为个体金融、普惠金融发展添助力。</string>
    <string name="recharge_text">请输入充值金额</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_money_residue">您的账户目前可用余额：</string>
    <string name="text_rmb">元</string>
    <string name="recharge_btn_text">充值</string>
    <string name="recharge_hint">温馨提示：</string>
    <string name="recharge_introduce">1、所有投资保证金将有第三方平台托管。 2、线上、线下充值手续费全免。 3、请注意您的银行卡充值限额，以免造成不便。 4、如果充值进的没有及时到帐，请与客服联系。 5、禁止信用卡套现、虚假交易等行为，已经发现将予以处罚,包括但不限于：限制收款、冻结账户，永久停止服务等。 6、如果您的账户充值金额为用于投资在本平台的理财服务,3个月之后才能进行体现申请。 7、如果已在手机客户端充过值，则电脑端或手机端体现都只能使用该银行卡。除非原卡丢失、损坏或停用，否则一经绑定银行卡，将不得更换。此情况下，请联系客服并提供由银行提供的书面证明材料。</string>
    <string name="btn_login">登录</string>
    <string name="p2pTitle">硅谷金融</string>
    <string name="share">分享</string>
</resources>
