<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:text="@string/feedback_register"
        android:textAlignment="center"
        android:textColor="@color/colorDeepBlue"
        android:textSize="@dimen/register_textsize_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/feedback_send"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/feedback_text_20" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill_register"
                android:textColor="@color/colorPaleRed" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invest_register"
                android:textColor="@color/colorPaleRed" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consult_register"
                android:textColor="@color/colorPaleRed" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/feedback_message"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/feedback_text_20" />

        <EditText
            android:layout_width="@dimen/problem_width_220"
            android:layout_height="@dimen/problem_height_60"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/feedback_problem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_yes"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/feedback_mLeft_60"
            android:text="@string/feedback_no" />
    </LinearLayout>
</LinearLayout>