<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/main_frag">

        <com.example.common.TitleBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titlebar"/>

        <com.youth.banner.Banner
            android:id="@+id/frag1_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frag_height_150" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mTop_10"
            android:text="@string/main_frag_name"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mTop_20"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_shape"
                android:gravity="center"
                android:text="@string/main_frag_txt_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mStart_15"
                android:background="@drawable/tv_shape"
                android:gravity="center"
                android:text="@string/main_frag_txt_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mStart_15"
                android:background="@drawable/tv_shape"
                android:gravity="center"
                android:text="@string/main_frag_txt_three" />
        </LinearLayout>

        <com.example.common.CusTomView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/frag_height_150"
            android:layout_marginTop="@dimen/mTop_10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mTop_10"
            android:text="@string/main_frag_apr"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_25" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mStart_30"
            android:layout_marginTop="@dimen/mTop_10"
            android:layout_marginEnd="@dimen/mEnd_30"
            android:background="@color/colorPaleRed"
            android:text="@string/main_frag_btn"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_25" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_frag_safeguard"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/mTop_15"/>
    </LinearLayout>


   <com.example.common.LoadingPage

       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:id="@+id/main_loading"/>
</FrameLayout>